Update in layout

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mini RM</title>
+  <title>Mini RM - TOTVS Style</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <h1>(Mini RM)</h1>
+    <h1>Mini RM</h1>
     <p>Gerencie seus funcionários de forma simples e prática</p>
   </header>
 
@@ -22,7 +22,7 @@
 
     <!-- Botão de adicionar/atualizar -->
     <div class="btn-container">
-      <button id="btnSalvar" onclick="adicionarOuEditarFuncionario()">➕ Adicionar Funcionário</button>
+      <button id="btnSalvar" onclick="adicionarOuEditarFuncionario()">Adicionar Funcionário</button>
     </div>
 
     <!-- Barra de pesquisa -->
@@ -31,7 +31,7 @@
     </div>
 
     <!-- Contador -->
-    <p id="contador">👥 Nenhum funcionário cadastrado</p>
+    <p id="contador">Nenhum funcionário cadastrado</p>
 
     <!-- Tabela -->
     <table>
